feat(api): include state vectors in gravity frames